turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: not found: value i
  rule(i) match{
       ^